data/derived/sp14/progs/unify/prog4626.ml.out
Characters 131-133:
  | Average (e1,e2)-> (float_of_int e1+. float_of_int e2)/2
                                    ^^
Error: This expression has type expr but an expression was expected of type
         int
